<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        style="@style/Text.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_type" />

    <Spinner
        android:id="@+id/sp_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs" />

    <EditText
        android:id="@+id/et_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/payment_methods_label_hint"
        android:inputType="text"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted" />

    <EditText
        android:id="@+id/et_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/payment_methods_holder_hint"
        android:inputType="textPersonName"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/payment_methods_account_hint"
        android:inputType="number"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted" />

    <CheckBox
        android:id="@+id/cb_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/payment_methods_set_default"
        android:textColor="@color/text_primary" />
</LinearLayout>
